--- a/Tene-react/package.json
+++ b/Tene-react/package.json
@@ -15,7 +15,8 @@
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.1.1",
     "@mui/icons-material": "^7.1.1",
-    "@mui/material": "^7.1.1",
+    "@mui/lab": "^7.0.0-beta.14",
+    "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "react": "^19.1.0",
