--- a/Tene-react/package.json
+++ b/Tene-react/package.json
@@ -24,6 +24,8 @@
     "react-hook-form": "^7.58.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
+    "stylis": "^4.3.6",
+    "stylis-plugin-rtl": "^2.1.1",
     "yup": "^1.6.1",
     "yup-phone": "^1.3.2"
   },
