--- a/Tene-Api/Tene/appsettings.json
+++ b/Tene-Api/Tene/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Issuer": "http://localhost:5173",
+    "Audience": "http://localhost:5173",
+    "Key": "ThisisaverylongsecretkeyJWT123456"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "SenderEmail": "hovalotin@gmail.com",
+    "SenderPassword": "qekp zkxj ehvt ucsg"
+  },
   "AllowedHosts": "*"
 }
